# Santiq

./: .gitignore  CONTRIBUTING.md  Readme.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md  api-reference.md  cli-reference.md  configuration.md  external_plugin_development_guide.md  external_plugin_guide.md  getting-started.md  installation.md  monitoring.md  plugin-development.md  plugin_developement.md  plugin_development.md  quick_reference.md  user-guide.md  user_guide.md
examples/: basic_pipeline.yml  excel_pipeline.yml  external_plugins_example.yml  json_pipeline.yml
examples/sample_data/: sample_data.json  sample_data.xlsx
santiq/: __init__.py  __main__.py
santiq/cli/: main.py
santiq/cli/commands/: data_utils.py  plugin.py  plugin_external.py  plugin_install.py  plugin_list.py  plugin_manage.py  run.py
santiq/core/: __init__.py  audit.py  config.py  config_manager.py  config_models.py  engine.py  exceptions.py  external_plugin_manager.py  pipeline.py  pipeline_context.py  pipeline_stages.py  plugin_discovery.py  plugin_lifecycle.py  plugin_manager.py
santiq/core/discovery/: __init__.py  entry_point_discovery.py  local_discovery.py  plugin_discovery.py  plugin_validator.py
santiq/core/stages/: __init__.py  base.py  extraction.py  loading.py  pipeline_stages.py  profiling.py  transformation.py
santiq/plugins/base/: extractor.py  (+3 more)
scripts/: create_sample_excel.py  run_tests.py  test_workflows.py
tests/: __init__.py  conftest.py
tests/test_core/: github_workflow_test.py  test_commands.py  test_config.py  test_engine.py  test_external_plugin_management.py  test_external_plugin_template.py  test_extractors.py  test_loaders.py  test_pipeline_execution.py  test_plugin_compatibility.py  test_plugin_manager.py  test_profilers.py  test_transformers.py
(+8 files in other folders)
