[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SANTIQ"
version = "0.1.0"
description = "A lightweight, modular, plugin-first ETL platform"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Dhritikrishna Tripathi", email = "dhritikrishnat@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
santiq = "santiq.cli.main:app"

[project.entry-points."Santiq.extractors"]
csv_extractor = "santiq.plugins.extractors.csv_extractor:CSVExtractor"

[project.entry-points."Santiq.profilers"]
basic_profiler = "santiq.plugins.profilers.basic_profiler:BasicProfiler"

[project.entry-points."Santiq.transformers"]
basic_cleaner = "santiq.plugins.transformers.basic_cleaner:BasicCleaner"

[project.entry-points."Santiq.loaders"]
csv_loader = "santiq.plugins.loaders.csv_loader:CSVLoader"

[tool.setuptools.packages.find]
include = ["santiq*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true